# ucomp-pipeline

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  INSTALLATION.in  LICENSE  README.md  RELEASES.md  index.md  linux_configure  linux_configure.sh  mac_configure  notify_release  ucomp_find_ssw_dependencies.pro  ucomp_find_ssw_dependencies.sh  ucomp_unit_config_dir.pro.in
lib/: CMakeLists.txt  mg_dist_tools.dlm.in  mg_profiler_report.pro  mg_secs2hms.pro
lib/mpfit/: CMakeLists.txt  INSTALL  MPREADME  fitqa.html  gauss1.pro  gauss1p.pro  linfitex.pro  mpchilim.pro  mpchitest.pro  mpcurvefit.pro  mpfit.pro  mpfit.tar  mpfit2dfun.pro  mpfit2dpeak.pro  mpfitellipse.pro  mpfitexpr.pro  mpfitfun.pro  mpfitpeak.pro  mpfittut.html  mpftest.pro  mpnormlim.pro  mpnormtest.pro  mpproperr.pro  setfitparm.pro  tnmin.pro
lib/mysql/: CMakeLists.txt  mg_mysql.c  mg_mysql.dlm.in  mgdbmysql__define.pro
resource/: CMakeLists.txt  config_spec.cfg  epochs.cfg  epochs_spec.cfg  program_names.cfg  ucomp.epochs.cfg  ucomp.epochs.spec.cfg  ucomp.lines.spec.cfg
resource/cameras/: CMakeLists.txt  cameras.cfg  hot_pixel.nc  ucomp_hot_high.sav  ucomp_hot_high_20221125.sav  ucomp_hot_high_20221125_test.sav  ucomp_hot_high_20240228.sav  ucomp_hot_high_20240312.sav  ucomp_hot_high_20240322.sav  ucomp_hot_high_20240401.sav  ucomp_hot_high_20240409.sav  ucomp_hot_high_20240409_test.sav  ucomp_hot_low.sav
resource/colortables/: CMakeLists.txt  doppler_ct.sav  mpl.tbl
resource/database/: CMakeLists.txt  mlso_producttype_insert.tbl  ucomp_cal.tbl  ucomp_eng.tbl  ucomp_file.tbl  ucomp_level_insert.tbl  ucomp_mission.tbl  ucomp_mission_insert.tbl  ucomp_quality.tbl  ucomp_quality_insert.tbl  ucomp_raw.tbl  ucomp_sci.tbl  ucomp_sci_dynamics.tbl  ucomp_sci_polarization.tbl
resource/demodulation/: CMakeLists.txt  Dmx_Temp_Coefs.sav  ucomp.1079.dmx-temp-coeffs.1.sav  ucomp.1083.dmx-temp-coeffs.1.sav  ucomp.530.dmx-temp-coeffs.1.sav  ucomp.637.dmx-temp-coeffs.1.sav  ucomp.656.dmx-temp-coeffs.1.sav  ucomp.691.dmx-temp-coeffs.1.sav  ucomp.706.dmx-temp-coeffs.1.sav  ucomp.761.dmx-temp-coeffs.1.sav  ucomp.802.dmx-temp-coeffs.1.sav  ucomp.991.dmx-temp-coeffs.1.sav
resource/density/: CMakeLists.txt  chianti_v10.1_pycelp_fe13_h99_d120_ratio.nc  chianti_v11.0_pycelp_fe13_h239_d301_v1.0_inverted_ratio.nc  chianti_v11.0_pycelp_fe13_h239_d301_v1.0_ratio.nc
resource/distortion/: CMakeLists.txt  dist_coeff_20210708_1074.sav  dist_coeff_20210708_1079.sav  dist_coeff_20210708_1083.sav  dist_coeff_20210708_789.sav  dist_coeff_20220305_1074_degree3_dot_spacing15.2534.sav  dist_coeff_20220305_1074_degree4.sav  dist_coeff_20220305_1079_degree3_dot_spacing15.2534.sav  dist_coeff_20220305_1079_degree3_dot_spacing15.2560.sav  dist_coeff_20220305_1079_degree4.sav  dist_coeff_20220305_1083_degree3_dot_spacing15.2534.sav  dist_coeff_20220305_1083_degree3_dot_spacing15.2798.sav  dist_coeff_20220305_1083_degree4.sav  dist_coeff_20220305_637_degree3_dot_spacing14.9016.sav  dist_coeff_20220305_637_degree3_dot_spacing15.2534.sav  dist_coeff_20220305_637_degree4.sav  dist_coeff_20220305_656_degree3_dot_spacing14.9217.sav  dist_coeff_20220305_656_degree3_dot_spacing15.2534.sav  dist_coeff_20220305_656_degree4.sav  dist_coeff_20220305_691_degree3_dot_spacing14.9589.sav  dist_coeff_20220305_691_degree3_dot_spacing15.2534.sav  dist_coeff_20220305_691_degree4.sav  dist_coeff_20220305_706_degree3_dot_spacing14.9729.sav  dist_coeff_20220305_706_degree3_dot_spacing15.2534.sav  dist_coeff_20220305_706_degree4.sav  dist_coeff_20220305_789_degree3_dot_spacing15.0313.sav  dist_coeff_20220305_789_degree3_dot_spacing15.2534.sav  dist_coeff_20220305_789_degree4.sav  dist_coeff_20240330_1074_degree3.sav  distortion-comp.sav
resource/docs/: CMakeLists.txt  UCOMP_CITATION.txt  UCOMP_CITATION.txt.in
resource/logos/: CMakeLists.txt
resource/temperature/: CMakeLists.txt  false-color-images.cfg
resource/validation/: CMakeLists.txt  ucomp.l0.validation.cfg  ucomp.l1.validation.cfg
resource/wave_regions/: ucomp.1074.cfg  ucomp.1074.spec.cfg  ucomp.1079.cfg  ucomp.1079.spec.cfg  ucomp.1083.cfg  ucomp.1083.spec.cfg  ucomp.530.cfg  ucomp.530.spec.cfg  ucomp.637.cfg  ucomp.637.spec.cfg  ucomp.656.cfg  ucomp.656.spec.cfg  ucomp.670.cfg  ucomp.670.spec.cfg  ucomp.691.cfg  ucomp.691.spec.cfg  ucomp.706.cfg  ucomp.706.spec.cfg  ucomp.761.cfg  ucomp.761.spec.cfg  ucomp.789.cfg  ucomp.789.spec.cfg  ucomp.802.cfg  ucomp.802.spec.cfg  ucomp.991.cfg  ucomp.991.spec.cfg
src/: CMakeLists.txt  epochs.spec.cfg  glossary.idldoc  lines.spec.cfg  ucomp_crash_notification.pro  ucomp_decompose_date.pro  ucomp_get_route.pro  ucomp_pipeline_step.pro  ucomp_run__define.pro  ucomp_run_calibration.pro  ucomp_run_eod_pipeline.pro  ucomp_run_pipeline.pro  ucomp_run_realtime_pipeline.pro  ucomp_sec2str.pro  ucomp_state.pro  ucomp_verify_dates.pro  ucomp_version.pro.in
src/calendar/: .idldoc  ucomp_dateobs2datetime.pro  ucomp_dateobs2julday.pro  ucomp_decompose_date.pro  ucomp_hst2ut.pro  ucomp_idlsave2dateobs.pro  ucomp_increment_date.pro  ucomp_julday2dateobs.pro  ucomp_parse_dateexpr.pro  ucomp_sec2str.pro  ucomp_ut2hst.pro
src/calibrate/: .idldoc  ucomp_average_darkfile.pro  ucomp_average_flatfile.pro  ucomp_calibration__define.pro  ucomp_calibration_steps.pro  ucomp_calibration_wrapper.pro  ucomp_check_cal_quality.pro  ucomp_distort_wrapper.pro  ucomp_flats_distortion.pro  ucomp_get_dmatrix.pro  ucomp_index2nuc.pro  ucomp_make_darkcor_flats.pro  ucomp_make_darks.pro  ucomp_make_demod.pro  ucomp_make_flats.pro  ucomp_nuc2index.pro  ucomp_polarimetric_calibration.pro  ucomp_read_master_flats.pro  ucomp_write_calfile.pro
src/database/: .idldoc  CMakeLists.txt  mlso_producttype_insert.tbl  ucomp_cal.tbl  ucomp_check_database.pro  ucomp_create_tables.pro  ucomp_db_cal_insert.pro  ucomp_db_clearday.pro  ucomp_db_cleartable.pro  ucomp_db_connect.pro  ucomp_db_create_tables.pro  ucomp_db_density_insert.pro  ucomp_db_eng_insert.pro  ucomp_db_file_insert.pro  ucomp_db_float.pro  ucomp_db_l2_average_insert.pro  ucomp_db_log_warnings.pro  ucomp_db_raw_insert.pro  (+18 more)
(+1204 files in other folders)
