add_subdirectory(calendar)
add_subdirectory(calibrate)
add_subdirectory(database)
add_subdirectory(display)
add_subdirectory(distribute)
add_subdirectory(eod)
add_subdirectory(fileio)
add_subdirectory(gbu)
add_subdirectory(geometry)
add_subdirectory(level1)
add_subdirectory(level2)
add_subdirectory(level3)
add_subdirectory(quality)
add_subdirectory(realtime)
add_subdirectory(repair)
add_subdirectory(report)
add_subdirectory(reprocess)
add_subdirectory(utils)
add_subdirectory(validate)
add_subdirectory(verify)

configure_file(ucomp_version.pro.in ucomp_version.pro)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ucomp_version.pro DESTINATION src)

file(GLOB PRO_FILES "*.pro")
install(FILES ${PRO_FILES} DESTINATION src)
